--- a/package.json
+++ b/package.json
@@ -19,15 +19,23 @@
     "@paljs/nexus": "^6.0.7",
     "@paljs/types": "^6.0.7",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
     "graphql-shield": "^7.6.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "nexus": "^1.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -40,10 +48,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "shadcn-ui": "^0.4.1",
+    "tailwindcss": "^3.3.6",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5"
