--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql-middleware": "^6.1.35",
     "graphql-shield": "^7.6.5",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "nexus": "^1.3.0",
