--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf dist",
-    "generate": "yarn pal g && npm -s run generate:prisma && npm -s run generate:nexus",
+    "generate": "rimraf schema/types && yarn pal g && npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json schema/schema",
     "db-dev": "prisma migrate dev"
@@ -65,6 +65,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "rimraf": "^5.0.5",
     "shadcn-ui": "^0.4.1",
     "tailwindcss": "^3.3.6",
     "ts-node": "^10.9.1",
