--- a/package.json
+++ b/package.json
@@ -26,23 +26,27 @@
     "@paljs/types": "^6.0.7",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "escape-html": "^1.0.3",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
     "graphql-shield": "^7.6.5",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.298.0",
     "next": "14.0.3",
     "nexus": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "slate": "^0.101.4",
+    "slate-history": "^0.100.0",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.101.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1"
@@ -55,6 +59,7 @@
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
     "@paljs/cli": "^6.0.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/escape-html": "^1.0.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
