--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "slate-react": "^0.101.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@clerk/types": "^3.58.1",
