--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
+    "values.js": "^2.1.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
