--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "nexus": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-image-crop": "^11.0.2",
     "slate": "^0.101.4",
     "slate-history": "^0.100.0",
     "slate-hyperscript": "^0.100.0",
