--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn generate:prisma && next build",
+    "build": "yarn generate:prisma && yarn prisma db push && next build",
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf dist",
