--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@paljs/types": "^6.0.7",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@uiw/react-color-chrome": "^2.0.5",
     "@uiw/react-color-circle": "^2.0.5",
     "bcryptjs": "^2.4.3",
