--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.1",
     "values.js": "^2.1.1",
     "zustand": "^4.4.7"
   },
@@ -72,6 +73,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
