Short Input component improvements, duplicate item, delete item

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@uiw/react-color-chrome": "^2.0.5",
     "@uiw/react-color-circle": "^2.0.5",
@@ -49,6 +51,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-image-crop": "^11.0.2",
+    "simple-zustand-devtools": "^1.1.0",
     "slate": "^0.101.4",
     "slate-history": "^0.100.0",
     "slate-hyperscript": "^0.100.0",
