--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-html-parser": "^2.0.2",
     "react-image-crop": "^11.0.2",
     "simple-zustand-devtools": "^1.1.0",
     "slate": "^0.101.4",
@@ -78,6 +79,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
+    "@types/react-html-parser": "^2.0.6",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
