--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@paljs/nexus": "^6.0.7",
     "@paljs/types": "^6.0.7",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
