--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.2.0",
     "escape-html": "^1.0.3",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
@@ -51,6 +52,7 @@
     "next": "14.0.3",
     "nexus": "^1.3.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-html-parser": "^2.0.2",
