--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^16.5.0",
     "@paljs/nexus": "^6.0.7",
     "@paljs/types": "^6.0.7",
     "@prisma/client": "^5.6.0",
@@ -37,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@uiw/react-color-chrome": "^2.0.5",
     "@uiw/react-color-circle": "^2.0.5",
+    "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -67,6 +69,7 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "values.js": "^2.1.1",
+    "yarn": "^1.22.21",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -87,6 +90,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
