--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "@types/react-dom": "^18",
     "@types/react-html-parser": "^2.0.6",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
