--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.2",
     "clsx": "^2.0.0",
     "date-fns": "^3.2.0",
     "escape-html": "^1.0.3",
