--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cloudinary": "^1.41.2",
     "clsx": "^2.0.0",
     "date-fns": "^3.2.0",
+    "dayjs": "^1.11.10",
     "escape-html": "^1.0.3",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
