--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
     "escape-html": "^1.0.3",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
@@ -73,6 +74,7 @@
     "uuid": "^9.0.1",
     "values.js": "^2.1.1",
     "yarn": "^1.22.21",
+    "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
