--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@uiw/react-color-circle": "^2.0.5",
     "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.2",
     "clsx": "^2.0.0",
@@ -60,6 +61,7 @@
     "next": "14.0.3",
     "nexus": "^1.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
