--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "generate": "rimraf schema/types && yarn pal g && npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json schema/schema",
-    "db-dev": "prisma migrate dev"
+    "db-dev": "prisma migrate dev",
+    "hasura:cli": "yarn env-cmd -f questify-hasura/.env yarn hasura --project questify-hasura",
+    "hasura:start": "docker-compose -f questify-hasura/docker-compose.yml up",
+    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status",
+    "hasura:dev": "yarn hasura:start && yarn hasura:cli console",
+    "hasura:export": "yarn hasura:cli metadata export && yarn graphql-codegen --config codegen.introspect-localhost.yml",
+    "graphql-codegen:cached": "postmon --include questify-hasura/schema.graphql graphql/**/*.graphql -- yarn graphql-codegen"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -47,8 +53,11 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.2",
     "clsx": "^2.0.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "env-cmd": "^10.1.0",
     "escape-html": "^1.0.3",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
@@ -58,7 +67,7 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.298.0",
-    "next": "14.0.3",
+    "next": "^14.2.4",
     "nexus": "^1.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -78,6 +87,7 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "values.js": "^2.1.1",
+    "wait-on": "^8.0.0",
     "yarn": "^1.22.21",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
@@ -85,6 +95,7 @@
   "devDependencies": {
     "@clerk/types": "^3.58.1",
     "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
@@ -103,11 +114,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "hasura-cli": "2.22.0",
     "postcss": "^8.4.32",
+    "postmon": "^0.2.2",
     "prettier": "^3.1.0",
     "prisma": "^5.8.0",
     "rimraf": "^5.0.5",
-    "shadcn-ui": "^0.4.1",
+    "shadcn-ui": "^0.2.3",
     "tailwindcss": "^3.3.6",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
