--- a/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
@@ -1,3 +1,15 @@
 table:
   name: FormItem
   schema: public
+object_relationships:
+  - name: Form
+    using:
+      foreign_key_constraint_on: formId
+array_relationships:
+  - name: Answers
+    using:
+      foreign_key_constraint_on:
+        column: formItemId
+        table:
+          name: Answer
+          schema: public
