--- a/questify-hasura/metadata/databases/questify/tables/public_Answer.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Answer.yaml
@@ -1,3 +1,7 @@
 table:
   name: Answer
   schema: public
+object_relationships:
+  - name: FormItem
+    using:
+      foreign_key_constraint_on: formItemId
