--- a/questify-hasura/metadata/databases/questify/tables/public_Folder.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Folder.yaml
@@ -1,3 +1,11 @@
 table:
   name: Folder
   schema: public
+array_relationships:
+  - name: Forms
+    using:
+      foreign_key_constraint_on:
+        column: folderId
+        table:
+          name: Form
+          schema: public
