--- a/questify-hasura/metadata/databases/questify/tables/public_Form.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Form.yaml
@@ -13,3 +13,69 @@ array_relationships:
         table:
           name: FormItem
           schema: public
+insert_permissions:
+  - role: user
+    permission:
+      check:
+        ownerId:
+          _eq: X-Hasura-User-Id
+      set:
+        ownerId: x-hasura-User-Id
+      columns:
+        - favorite
+        - order
+        - responses
+        - style
+        - folderId
+        - id
+        - name
+        - ownerId
+        - createdAt
+        - updatedAt
+    comment: ""
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - favorite
+        - order
+        - responses
+        - style
+        - folderId
+        - id
+        - name
+        - ownerId
+        - createdAt
+        - updatedAt
+      filter:
+        ownerId:
+          _eq: X-Hasura-User-Id
+    comment: ""
+update_permissions:
+  - role: user
+    permission:
+      columns:
+        - favorite
+        - order
+        - responses
+        - style
+        - folderId
+        - id
+        - name
+        - ownerId
+        - createdAt
+        - updatedAt
+      filter:
+        ownerId:
+          _eq: X-Hasura-User-Id
+      check: null
+      set:
+        ownerId: x-hasura-User-Id
+    comment: ""
+delete_permissions:
+  - role: user
+    permission:
+      filter:
+        ownerId:
+          _eq: X-Hasura-User-Id
+    comment: ""
