--- a/questify-hasura/metadata/databases/questify/tables/public_Answer.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Answer.yaml
@@ -6,6 +6,15 @@ object_relationships:
     using:
       foreign_key_constraint_on: formItemId
 insert_permissions:
+  - role: public
+    permission:
+      check: {}
+      columns:
+        - formItemId
+        - id
+        - responseId
+        - value
+    comment: ""
   - role: user
     permission:
       check: {}
