--- a/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
@@ -29,6 +29,21 @@ insert_permissions:
         - name
     comment: ""
 select_permissions:
+  - role: public
+    permission:
+      columns:
+        - type
+        - required
+        - order
+        - section
+        - image
+        - items
+        - formId
+        - id
+        - name
+      filter: {}
+      allow_aggregations: true
+    comment: ""
   - role: user
     permission:
       columns:
