--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "slate-history": "^0.100.0",
     "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.101.3",
+    "subscriptions-transport-ws": "^0.11.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
