--- a/questify-hasura/metadata/databases/questify/tables/public_Notification.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Notification.yaml
@@ -22,6 +22,17 @@ insert_permissions:
         - read
     comment: ""
 select_permissions:
+  - role: public
+    permission:
+      columns:
+        - createdAt
+        - description
+        - formId
+        - id
+        - ownerId
+        - read
+      filter: {}
+    comment: ""
   - role: user
     permission:
       columns:
