--- a/package.json
+++ b/package.json
@@ -8,19 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf dist",
-    "generate": "rimraf schema/types && yarn pal g && npm -s run generate:prisma && npm -s run generate:nexus",
-    "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json schema/schema",
-    "db-dev": "prisma migrate dev",
     "hasura:cli": "yarn env-cmd -f questify-hasura/.env yarn hasura --project questify-hasura",
     "hasura:start": "docker-compose -f questify-hasura/docker-compose.yml up",
     "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status",
     "hasura:dev": "yarn hasura:start && yarn hasura:cli console",
     "hasura:export": "yarn hasura:cli metadata export && yarn graphql-codegen --config codegen.introspect-localhost.yml",
     "graphql-codegen:cached": "postmon --include questify-hasura/schema.graphql graphql/**/*.graphql -- yarn graphql-codegen"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
@@ -32,9 +25,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hello-pangea/dnd": "^16.5.0",
-    "@paljs/nexus": "^6.0.7",
-    "@paljs/types": "^6.0.7",
-    "@prisma/client": "^5.8.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.1.0",
@@ -46,13 +36,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@uiw/react-color-chrome": "^2.0.5",
-    "@uiw/react-color-circle": "^2.0.5",
     "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^1.41.2",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -63,15 +50,12 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
-    "graphql-middleware": "^6.1.35",
-    "graphql-shield": "^7.6.5",
-    "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.298.0",
     "next": "^14.2.6",
-    "nexus": "^1.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -102,12 +86,10 @@
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
-    "@paljs/cli": "^6.0.7",
-    "@types/bcryptjs": "^2.4.6",
     "@types/escape-html": "^1.0.4",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "@types/react-html-parser": "^2.0.6",
     "@types/uuid": "^9.0.7",
@@ -121,7 +103,6 @@
     "postcss": "^8.4.32",
     "postmon": "^0.2.2",
     "prettier": "^3.1.0",
-    "prisma": "^5.8.0",
     "rimraf": "^5.0.5",
     "shadcn-ui": "^0.2.3",
     "tailwindcss": "^3.3.6",
