--- a/questify-hasura/docker-compose.yml
+++ b/questify-hasura/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: postgres:13-alpine
     # restart: always
     ports:
-      - "5432:5432"
+      - "6543:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgrespassword
-
   graphql-engine:
     image: hasura/graphql-engine:v2.40.2.cli-migrations-v3
     ports:
@@ -31,13 +31,12 @@ services:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres_main:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      #HASURA_GRAPHQL_UNAUTHORIZED_ROLE: 'public' # only use this role so the whole unauthenticated world can query
 
   postgres_logs:
     image: postgres:15-alpine
     # restart: always
     ports:
-      - "5433:5433"
+      - "6544:5433"
     volumes:
       - logs_db_data:/var/lib/postgresql/data
     environment:
