--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/postgres": "^0.9.0",
     "add": "^2.0.6",
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -53,6 +56,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.298.0",
     "next": "^14.2.6",
+    "playwright": "^1.46.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
@@ -86,6 +90,7 @@
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
+    "@playwright/test": "^1.46.1",
     "@types/escape-html": "^1.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
