--- a/questify-hasura/metadata/databases/questify/tables/public_Form.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_Form.yaml
@@ -80,15 +80,16 @@ update_permissions:
   - role: user
     permission:
       columns:
+        - createdAt
         - favorite
-        - order
-        - responses
-        - style
         - folderId
         - id
         - name
+        - order
         - ownerId
-        - createdAt
+        - responses
+        - style
+        - thumbnail
         - updatedAt
       filter:
         ownerId:
