--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@chakra-ui/media-query": "^3.3.0",
     "@chakra-ui/system": "^2.6.2",
     "@clerk/nextjs": "^4.29.3",
+    "@emotion/css": "^11.13.5",
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hello-pangea/dnd": "^16.5.0",
+    "@lexical/react": "^0.20.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.1.0",
@@ -53,6 +55,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
+    "lexical": "^0.20.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.298.0",
     "next": "^14.2.6",
