--- a/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
+++ b/questify-hasura/metadata/databases/questify/tables/public_FormItem.yaml
@@ -13,3 +13,79 @@ array_relationships:
         table:
           name: Answer
           schema: public
+insert_permissions:
+  - role: user
+    permission:
+      check: {}
+      columns:
+        - required
+        - type
+        - order
+        - section
+        - image
+        - items
+        - formId
+        - id
+        - name
+    comment: ""
+select_permissions:
+  - role: public
+    permission:
+      columns:
+        - required
+        - type
+        - order
+        - section
+        - image
+        - items
+        - formId
+        - id
+        - name
+      filter: {}
+      allow_aggregations: true
+    comment: ""
+  - role: user
+    permission:
+      columns:
+        - required
+        - type
+        - order
+        - section
+        - image
+        - items
+        - formId
+        - id
+        - name
+      filter:
+        Form:
+          ownerId:
+            _eq: X-Hasura-User-Id
+      allow_aggregations: true
+    comment: ""
+update_permissions:
+  - role: user
+    permission:
+      columns:
+        - required
+        - type
+        - order
+        - section
+        - image
+        - items
+        - formId
+        - id
+        - name
+      filter:
+        Form:
+          ownerId:
+            _eq: X-Hasura-User-Id
+      check: null
+    comment: ""
+delete_permissions:
+  - role: user
+    permission:
+      filter:
+        Form:
+          ownerId:
+            _eq: X-Hasura-User-Id
+    comment: ""
