--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -71,6 +72,7 @@
     "react-image-crop": "^11.0.2",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.3",
+    "shadcn": "^2.1.7",
     "simple-zustand-devtools": "^1.1.0",
     "slate": "^0.101.4",
     "slate-history": "^0.100.0",
@@ -113,7 +115,7 @@
     "postmon": "^0.2.2",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
-    "shadcn-ui": "^0.2.3",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.3.6",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
