--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf dist",
+    "hasura": "hasura",
     "hasura:cli": "yarn env-cmd -f questify-hasura/.env yarn hasura --project questify-hasura",
     "hasura:start": "docker-compose -f questify-hasura/docker-compose.yml up",
     "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status",
@@ -20,7 +21,7 @@
     "@apollo/server": "^4.9.5",
     "@chakra-ui/media-query": "^3.3.0",
     "@chakra-ui/system": "^2.6.2",
-    "@clerk/nextjs": "^4.29.3",
+    "@clerk/nextjs": "^6.10.6",
     "@emotion/css": "^11.13.5",
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
@@ -57,6 +58,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
+    "html-react-parser": "^5.2.2",
     "lexical": "^0.20.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.298.0",
@@ -68,7 +70,6 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-html-parser": "^2.0.2",
     "react-image-crop": "^11.0.2",
     "react-phone-input-2": "^2.15.1",
     "react-to-print": "^2.15.1",
@@ -111,7 +112,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "hasura-cli": "2.22.0",
     "postcss": "^8.4.32",
     "postmon": "^0.2.2",
     "prettier": "^3.1.0",
