--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.9.0",
     "add": "^2.0.6",
     "axios": "^1.7.5",
